# trajectory_manifold

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test.py  usage.html
.github/workflows/: sphinx.yml  testing.yaml
_sources/: api.rst.txt  index.rst.txt  usage.rst.txt
_static/: alabaster.css
_static/css/: custom.css
docs/: requirements.txt
docs/source/: conf.py  index.rst  usage.rst
docs/source/_static/css/: custom.css
examples/: mmse.py
figures/: README.md  benchmark.py  lotka-estimate.py  lotka-quant-plot.py  lotka-quant.py  lotka-sensitivity.py  lotka-weights.py
notebooks/: Lotka-Volterra.ipynb
tests/: test_estimation.py  test_helpers.py  test_main.py  test_manifold.py  test_optimize.py
trajectory_manifold/: __init__.py  estimation.py  examples.py  helpers.py  main.py  manifold.py  optimize.py
