[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trajectory_manifold"]

[project]
name = "trajectory_manifold"
version = "0.0.2"
authors = [
  { name="Helmuth Naumer", email="hnaumer2@illinois.edu" },
]
description = "Statistically Rigorous ODE Forecasting"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "jax>=0.4.3",
    "diffrax>=0.3.0",
    "jaxtyping"
]

[project.urls]
"Homepage" = "https://github.com/helmuthn/trajectory_manifold"
"Documentation" = "https://www.helmuthnaumer.com/trajectory_manifold/"
"Bug Tracker" = "https://github.com/helmuthn/trajectory_manifold/issues"

[tool.ruff]
ignore = ["F722"]